microk8s/ingress/guacamole-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: guacamole.test.microk8s.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: guacamole
          servicePort: 80
