microk8s/ingress/kong-manager-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-api-gateway-kong-admin
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: admin.kong.microk8s.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-api-gateway-kong-admin 
          servicePort: 8444
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-api-gateway-kong-manager
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: manager.kong.microk8s.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-api-gateway-kong-manager
          servicePort: 8445
