microk8s/ingress/kubernetes-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - hosts:
    - dashboard.kube.microk8s.lab
  rules:
  - host: dashboard.kube.microk8s.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
